# hacienda-ghost

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  POC_PLUGIN_CLAUDE_CODE.md  README.fr.md  README.md  SECURITY.md  TODO.md  aegra.json  compose.yml  conftest.py  docker-compose.embedder.yml  docker-compose.llm.yml  docker-compose.workstation-ports.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  zensical.fr.toml  zensical.toml
.benchmarks/Windows-CPython-3.13-64bit/: 0001_708732599f5c7e19918a5fba2ff26f3ddf3d7299_20260422_175718.json  0002_a36cb63c7c351692e9fc68be500aa3c67ef037a5_20260422_180000.json  0003_e4369efd6178d064208f22126237a6183e1c4f34_20260422_180509.json  0004_82c29c0593536dfc33a110bc86f4e603da1ee6e6_20260422_180841_uncommited-changes.json  0005_f475431acfd000331b763d61bd8d560ea17a3e32_20260422_181253_uncommited-changes.json  0006_4f9c767c9fe3423f37726382bb690f46647e0017_20260422_181739.json  0007_4f9c767c9fe3423f37726382bb690f46647e0017_20260422_181754.json  0008_4f9c767c9fe3423f37726382bb690f46647e0017_20260422_181808.json  0009_c6d91251a634a361a3f58e2c293fdb0cecc11fb9_20260422_220151.json  0010_c6d91251a634a361a3f58e2c293fdb0cecc11fb9_20260422_220234.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  docker.yml  mcpb.yml  proxy-install-ci.yml  release.yml  sprint1-ci.yml
.piighost/: config.toml  daemon.json  projects.db  projects.db-shm  projects.db-wal
.piighost/sessions/: piighost-7e1862c4.audit.jsonl
bundles/core/: manifest.json
bundles/full/: manifest.json  pyproject.toml
docker/: Dockerfile  README.md  entrypoint.sh
docker/caddy/: Caddyfile
docker/scripts/: update-check.sh
docker/secrets/: .gitignore  age-recipient.example  bearer-tokens.example  vault-key.example
docs/: anonymizer.md  architecture.md  configuration.md  cowork-support.md  getting-started.md  index.md  install-paths.md  middleware.md
docs/en/: architecture.md  deployment.md  extending.md  getting-started.md  glossary.md  index.md  limitations.md  placeholder-factories.md  security.md  tool-call-strategies.md  why-anonymize.md
docs/fr/: architecture.md  deployment.md  extending.md  getting-started.md  glossary.md  index.md  limitations.md  placeholder-factories.md  security.md  tool-call-strategies.md  why-anonymize.md
examples/detectors/: common.py  europe.py  us.py
examples/graph/: pyproject.toml
examples/graph/front/: package.json
examples/graph/front/src/components/thread/: index.tsx
examples/graph/front/src/components/thread/agent-inbox/: utils.ts
examples/graph/front/src/components/thread/agent-inbox/components/: state-view.tsx
examples/graph/src/graph/: __init__.py  app.py  graph.py  ttl_sweeper.py
examples/llm/: .env.example  instructor_structured.py
plugin/: .gitignore  .mcp.json  CONNECTORS.md  LICENSE  README.md
plugin/.claude-plugin/: plugin.json
scripts/: build_mcpb.py  check_mcpb_consistency.py  install.ps1  install.sh  tes_gliner.py  tes_span_replacer.py  test_french_model.py  verify_cowork.py
src/aegra/: __init__.py  anonymizer.py  app.py  context.py  graph.py  graph_v2.py  graph_v3.py  graph_v4.py  middleware.py  prompts.py  state.py  utils.py
src/maskara/: anonymizer.py  graph.py  middleware.py  pipeline.py
src/piighost/: __init__.py  anonymizer.py  client.py  conversation_memory.py  conversation_pipeline.py  detector.py  entity_linker.py  entity_resolver.py  exceptions.py  labels.py  middleware.py  models.py  pipeline.py  placeholder.py  placeholder_tags.py  presets.py  registry.py  session.py  similarity.py  span_resolver.py  store.py  utils.py  validators.py
src/v2/: anonymizer.py  conversation_memory.py  conversation_pipeline.py  detector.py  entity_linker.py  entity_resolver.py  linker.py  middleware.py  models.py  pipeline.py  placeholder.py  resolver.py  utils.py
tests/: conftest.py  fakes.py  test_anonymizer.py  test_client.py  test_composite_detector.py  test_confidence_resolver.py  test_conftest_fixtures.py  test_conversation_memory.py  test_detector_examples.py  test_entity_conflict_resolver.py  test_exact_entity_linker.py  test_exceptions.py  test_faker_placeholder.py  test_labels.py  test_middleware.py  test_middleware_bc.py  test_models.py  test_optional_dependencies.py  test_pipeline.py  test_pipeline_memory.py  test_placeholder.py  test_presets.py  test_public_api.py  test_registry.py  test_session.py  test_similarity.py  test_span_replacer.py  test_utils.py  test_validators.py
tests/benchmarks/: bench_linker.py  bench_pipeline.py  bench_resolver.py
tests/classifier/: test_exact_classifier.py
tests/cli/: test_anonymize.py  test_cleanup_cmd.py  test_daemon_cmd.py  test_daemon_routing.py  test_detect.py  test_doctor.py  test_doctor_probe.py  test_exit_codes.py  test_init.py  test_output_contract.py  test_proxy_cmd.py  test_rehydrate.py  test_state_cmds.py  test_uninstall_cmd.py  test_vault_cmds.py
tests/daemon/: test_audit_log.py  test_cross_platform_smoke.py  test_handshake.py  test_lifecycle.py  test_lifecycle_disabled.py  test_reaper.py  test_server.py  test_server_reaper.py  test_server_rpc_logging.py  test_spawn_race.py  test_starting_marker.py
tests/detector/: test_base_ner_detector.py  test_chunked_detector.py  test_composite_detector.py  test_exact_match_detector.py  test_gliner2_detector.py  test_llm_detector.py  test_patterns.py  test_regex_detector.py  test_spacy_detector.py  test_transformers_detector.py
tests/e2e/: conftest.py  test_docker_smoke.py  test_hacienda_cowork_smoke.py  test_haystack_rag_advanced.py  test_haystack_rag_roundtrip.py  test_incremental_indexing.py  test_incremental_indexing_perf.py  test_incremental_indexing_v2.py  test_index_query_roundtrip.py  test_project_isolation.py  test_v2_to_v3_migration.py
tests/install/: test_ca.py  test_clients.py  test_doctor_reachability.py  test_executor.py  test_flags.py  test_host_config.py  test_hosts_file.py  test_install_e2e.py  test_install_light_mode.py  test_install_strict_mode.py  test_interactive.py  test_mcpb_consistency.py  (+12 more)
(+520 files in other folders)
