[project]
name = "piighost"
version = "0.7.0"
description = "PII anonymization middleware for AI agent conversations using LangChain integration."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Athroniaeth" },
]
keywords = [
    "pii",
    "anonymization",
    "nlp",
    "ner",
    "langchain",
    "langgraph",
    "gliner",
    "privacy",
    "ai",
    "agents",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/Athroniaeth/piighost"
Documentation = "https://github.com/Athroniaeth/piighost#readme"
Issues = "https://github.com/Athroniaeth/piighost/issues"
Changelog = "https://github.com/Athroniaeth/piighost/blob/master/CHANGELOG.md"

[project.optional-dependencies]
gliner2 = [
    "gliner2>=1.2",
]
langchain = [
    "langchain>=1.2",
]
faker = [
    "faker>=40.11",
]
cache = [
    "aiocache>=0.12",
]
middleware = [
    "langchain>=1.2",
    "aiocache>=0.12",
]
client = [
    "httpx>=0.28",
]
spacy = [
    "spacy>=3.7",
]
transformers = [
    "transformers>=4.40",
    "torch>=2.0",
]
llm = [
    "langchain-core>=0.3",
]
all = [
    "piighost[gliner2,langchain,faker,cache,client,spacy,transformers,llm]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piighost"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pyrefly>=0.55.0",
    "zensical>=0.0.27",
    "commitizen>=4.13.9",
    "pytest-asyncio>=0.25",
]
faker = [
    "faker>=40.11.0",
]
gliner2 = [
    "gliner2>=1.2.4",
]
langchain = [
    "langchain>=1.2.13",
]
spacy = [
    "spacy>=3.7",
]
transformers = [
    "transformers>=4.40",
    "torch>=2.0",
]
pipeline = [
    "aiocache>=0.12.3",
]
llm = [
    "langchain-core>=0.3",
]

[tool.pytest.ini_options]
addopts = "--cov=src/piighost"

[tool.coverage.report]
show_missing = true
