[project]
name = "piighost"
version = "0.8.0"
description = "PII anonymization middleware for AI agent conversations using LangChain integration."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Athroniaeth" },
]
keywords = [
    "pii",
    "anonymization",
    "nlp",
    "ner",
    "langchain",
    "langgraph",
    "gliner",
    "privacy",
    "ai",
    "agents",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.12",
    "pydantic>=2.0",
    "portalocker>=3.2.0",
    "psutil>=7.2.2",
    "httpx>=0.28",
]

[project.scripts]
piighost = "piighost.cli.main:app"
piighost-mcp = "piighost.mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/Athroniaeth/piighost"
Documentation = "https://github.com/Athroniaeth/piighost#readme"
Issues = "https://github.com/Athroniaeth/piighost/issues"
Changelog = "https://github.com/Athroniaeth/piighost/blob/master/CHANGELOG.md"

[project.optional-dependencies]
gliner2 = [
    "gliner2>=1.2",
    "requests>=2.28",
]
langchain = [
    "langchain>=1.2",
]
faker = [
    "faker>=40.11",
]
cache = [
    "aiocache>=0.12",
]
middleware = [
    "langchain>=1.2",
    "aiocache>=0.12",
]
client = [
    "httpx>=0.28",
    "typing-extensions>=4.4; python_version < '3.11'",
]
spacy = [
    "spacy>=3.7",
]
transformers = [
    "transformers>=4.40",
    "torch>=2.0",
]
llm = [
    "langchain-core>=0.3",
]
mcp = [
    "fastmcp>=3.2.4",
    "mcp>=1.0",
    "typer>=0.9",
]
index = [
    "kreuzberg>=4.9.4",
    "lancedb>=0.30.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "pyarrow>=14.0",
]
proxy = [
    "cryptography>=42.0",
    "uvicorn[standard]>=0.30",
    "starlette>=0.37",
    "httpx>=0.28",
    "typer>=0.9",
]
forward = [
    'mitmproxy>=11.0.0,<12; python_version >= "3.12"',
]
all = [
    "piighost[gliner2,langchain,faker,cache,client,spacy,transformers,llm,mcp,index,proxy,forward]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piighost"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pyrefly>=0.55.0",
    "zensical>=0.0.27",
    "commitizen>=4.13.9",
    "pytest-asyncio>=0.25",
    "bandit>=1.9.4",
]
faker = [
    "faker>=40.11.0",
]
gliner2 = [
    "gliner2>=1.2.4",
]
langchain = [
    "langchain>=1.2.13",
]
spacy = [
    "spacy>=3.7",
]
transformers = [
    "transformers>=4.40",
    "torch>=2.0",
]
pipeline = [
    "aiocache>=0.12.3",
]
llm = [
    "langchain-core>=0.3",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration' -p no:anyio -p no:faker -p no:langsmith_plugin"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that load heavy optional dependencies (torch, transformers, gliner2, spacy). Deselected by default.",
]

[tool.coverage.report]
show_missing = true

[tool.pyrefly]
# Examples in examples/graph/ and examples/llm/ live in their own environments
# (uv sub-project and PEP 723 inline metadata respectively), so their deps are
# not installed in the main venv and would otherwise show spurious
# missing-import errors. Scratch scripts under scripts/ have bit-rotted and
# reference removed APIs.
project-excludes = [
    "examples/graph/**",
    "examples/llm/**",
    ".claude/**",
    "scripts/**",
    "benchmarks/**",
    "dist/**",
    "site/**",
]
# Extra search paths for pyrefly:
#  - ``examples`` lets the detector example package resolve ``from .common``.
#  - the project root lets test files do ``from tests.conftest import ...``.
search-path = ["examples", "."]

[tool.bandit]
exclude_dirs = [
    "tests",
    "benchmarks",
    ".venv",
    "examples/graph/.venv",
    "examples/graph/front",
    "site",
    "dist",
    "docs",
    ".idea",
    ".git",
    ".cache",
    ".pytest_cache",
    ".ruff_cache",
]
